--- a/music.html
+++ b/music.html
@@ -242,7 +242,19 @@
 
     <!--Adsterra-->
     <!-- stick ads-->
-    
+    <div class='sticky-footer'>
+    <script type="text/javascript">
+	atOptions = {
+		'key' : '86d595490b53de20542964b56ca467e7',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//carryglanced.com/86d595490b53de20542964b56ca467e7/invoke.js"></script>
+
+</div>
     <br>
  <br>
  <br>
