--- a/music.html
+++ b/music.html
@@ -217,7 +217,7 @@
  </div>
   
  <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://amg01281-9xmediapvtltd-9xjalwa-samsungin-goszf.amagi.tv/playlist/amg01281-9xmediapvtltd-9xjalwa-samsungin/playlist.m3u8'><img src='9xmjalwa.jpg' alt='9xm'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://amg01281-9xmediapvtltd-9xjalwa-samsungin-goszf.amagi.tv/playlist/amg01281-9xmediapvtltd-9xjalwa-samsungin/playlist.m3u8'><img src='9xjalwa.jpg' alt='9xm'></a>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://amg01281-9xmediapvtltd-9xjalwa-samsungin-goszf.amagi.tv/playlist/amg01281-9xmediapvtltd-9xjalwa-samsungin/playlist.m3u8'>9x Jalwa</a>
         </div>
 
@@ -228,7 +228,7 @@
 
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://amg00877-b4unew-amg00877c3-lg-in-5261.playouts.now.amagi.tv/playlist.m3u8'><img src='b4u.jpg' alt='b4u music'></a>
+            <a href='https://cricstream4u.github.io/jwplyr/?file=https://amg00877-b4unew-amg00877c3-lg-in-5261.playouts.now.amagi.tv/playlist.m3u8'><img src='b4umusic.jpg' alt='b4u music'></a>
 
           <a href='https://cricstream4u.github.io/jwplyr/?file=https://amg00877-b4unew-amg00877c3-lg-in-5261.playouts.now.amagi.tv/playlist.m3u8'>B4U music</a>
         </div>
