--- a/sony-network.html
+++ b/sony-network.html
@@ -84,3 +84,9 @@
       </center>
       <!-- END: Powered by Supercounters.com -->
 </center>
+
+<div style="background-color: #0074d9; text-align: center; padding: 10px;">
+      <a href="https://t.me/cric_stream" target="_blank">
+        <button id="joinTelegramButton">Join Telegram</button>
+      </a>
+</div>
