--- a/psl.html
+++ b/psl.html
@@ -184,7 +184,10 @@
         <a href="https://cinearena.live/movies">Movies</a>
     </div>
    
-        
+        <div class='directory-item'>
+            <a href='https://dai.fancode.com/primary/123016_english_hls_5168ta-no/index.m3u8'><img src='fancode.jpg' alt='fancode'></a>
+            <a href='https://dai.fancode.com/primary/123016_english_hls_5168ta-no/index.m3u8'>Fancode</a></div>
+	    
         <div class='directory-item'>
             <a href='ptv2.html'><img src='ptv1.jpg' alt='PTV Sports'></a>
             <a href='ptv2.html'>PTV</a></div>
