--- a/sony-network.html
+++ b/sony-network.html
@@ -30,7 +30,7 @@
 </style>
 
 
-<iframe src="https://re.fredflix.fun/tata/play.php?id=sony_ten1""
+<iframe src="https://re.fredflix.fun/sports/play.php?id=338""
     width="100%" height="850px" 
     sandbox="allow-scripts allow-same-origin allow-modals"
     marginheight="0" marginwidth="0" scrolling="no" frameborder="0" 
