--- a/ipl.html
+++ b/ipl.html
@@ -185,8 +185,8 @@
    <div class='file-container'>
         
         <div class='directory-item'>
-            <a href='iplhin.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='iplhin.html'>IPL Hindi</a></div>
+            <a href='https://cricstream4u.github.io/stream/?video=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='https://cricstream4u.github.io/stream/?video=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr?file=https://prod-sports-eng-fa.jiocinema.com/hls/live/2117030/inallow-ipl-2025/eng/1540040249/15mindvrm0196aee80e6b0944cfb66338cda8d9b49011april2025/master.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
