--- a/psl.html
+++ b/psl.html
@@ -189,8 +189,8 @@
             <a href='https://cricstream4u.github.io/jwplyr?file=https://xenolive.com/fancode/global/primary/123016_english_hls_5168ta-no/index.m3u8'>Fancode</a></div>
 	    
         <div class='directory-item'>
-            <a href='ptv.html'><img src='ptv1.jpg' alt='PTV Sports'></a>
-            <a href='ptv.html'>PTV</a></div>
+            <a href='ptv2.html'><img src='ptv1.jpg' alt='PTV Sports'></a>
+            <a href='ptv2.html'>PTV</a></div>
 
 	<!--    <div class='directory-item'>
             <a href='sony-network.html'><img src='sony.jpg' alt='Sony Network'></a>
